--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,34 +1,3 @@
-<!-- <h1 class="title">Angular Router</h1>
-<nav>
-    <a routerLink="/video-liste" routerLinkActive="active">Video-Liste</a>
-    <a routerLink="/series-list" routerLinkActive="active">Series-List</a>
-</nav>
-
-
-
-<router-outlet></router-outlet> -->
-
-<!-- <div class="container">
-    <div class="row">
-        <div class="col-md-12">
-            <div class="card bg-dark my-5">
-                <div class="card-body">
-                    <h2 class="card-title text-center text-white py-3">{{ title }}</h2>
-                    <ul class="text-center list-inline py-3">
-                        <li class="list-inline-item">
-                            <a routerLink="/movies" class="btn btn-info">List Movies</a>
-                        </li>
-                        <li class="list-inline-item">
-                            <a routerLink="/addvideo" class="btn btn-info">Add Movie</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-            <router-outlet></router-outlet>
-        </div>
-    </div>
-</div> -->
-
 <head>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
@@ -113,8 +82,17 @@
                     </ul>
 
                 </div>
-
-
+                <!-- Grid column -->
+                <hr class="clearfix w-100 d-md-none">
+                <!-- Grid column -->
+                <div class="col-md-3 mx-auto">
+                    <!-- Links -->
+                    <h5 class="font-weight-bold text-uppercase mt-3 mb-4">Account</h5>
+                    <ul class="list-unstyled">
+                        <li><a href="">Konto-Details</a></li>
+                        <li><a href="">Abmelden</a></li>
+                    </ul>
+                </div>
             </div>
             <!-- Grid row -->
 
