--- a/src/app/recently-added/recently-added.component.html
+++ b/src/app/recently-added/recently-added.component.html
@@ -1,8 +1,19 @@
 <p>recently-added works!</p>
 
 <div class="card-group">
+    <div class="row">
+    <div class="column">
     <div class="card">
-        <input type="checkbox" id="card1" class="more">
+        <div class="content">
+            <div class="front">
+                <div class="genre"><h2>Thriller</h2></div>
+            </div>
+        </div>
+    </div>
+    </div>
+    <div class="column">
+    <div class="card">
+       <input type="checkbox" id="card1" class="more">
         <div class="content">
             <div class="front" style="background-image: url('assets/img/Filme/blutig_f.jpg')">
                 <div class="inner">
@@ -32,6 +43,8 @@
             </div>
         </div>
     </div>
+    </div>
+    <div class="column">
     <div class="card">
         <input type="checkbox" id="card2" class="more">
         <div class="content">
@@ -63,6 +76,10 @@
             </div>
         </div>
     </div>
+    </div>
+    </div>
+    <div class="row">
+    <div class="column">
     <div class="card">
         <input type="checkbox" id="card3" class="more">
         <div class="content">
@@ -94,6 +111,8 @@
             </div>
         </div>
     </div>
+    </div>
+    <div class="column">
     <div class="card">
         <input type="checkbox" id="card4" class="more">
         <div class="content">
@@ -125,6 +144,33 @@
             </div>
         </div>
     </div>
+    </div>
+    <div class="column">
+        <div class="card">
+            <div class="content">
+                <div class="front">
+                    <div class="more-videos">
+                        <a href="">
+                            <span class="fa fa-caret-right" style="font-size: 50px;"></span>
+                            <h4>More</h4>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    </div>
+    <div class="row">
+        <div class="column">
+            <div class="card">
+                <div class="content">
+                    <div class="front">
+                        <div class="genre"><h2>Komödien</h2></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    <div class="column">
     <div class="card">
         <input type="checkbox" id="card5" class="more">
         <div class="content">
@@ -156,6 +202,8 @@
             </div>
         </div>
     </div>
+    </div>
+    <div class="column">
     <div class="card">
         <input type="checkbox" id="card6" class="more">
         <div class="content">
@@ -187,6 +235,10 @@
             </div>
         </div>
     </div>
+    </div>
+    </div>
+    <div class="row">
+    <div class="column">
     <div class="card">
         <input type="checkbox" id="card7" class="more">
         <div class="content">
@@ -218,6 +270,8 @@
             </div>
         </div>
     </div>
+    </div>
+    <div class="column">
     <div class="card">
         <input type="checkbox" id="card8" class="more">
         <div class="content">
@@ -249,6 +303,33 @@
             </div>
         </div>
     </div>
+    </div>
+    <div class="column">
+            <div class="card">
+                <div class="content">
+                    <div class="front">
+                        <div class="more-videos">
+                            <a href="">
+                                <span class="fa fa-caret-right" style="font-size: 50px;"></span>
+                                <h4>More</h4>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="column">
+            <div class="card">
+               <div class="content">
+                    <div class="front">
+                        <div class="genre"><h2>Drama</h2></div>
+                    </div>
+                </div>
+            </div>
+        </div>   
+    <div class="column">
     <div class="card">
         <input type="checkbox" id="card9" class="more">
         <div class="content">
@@ -280,6 +361,8 @@
             </div>
         </div>
     </div>
+    </div>
+    <div class="column">
     <div class="card">
         <input type="checkbox" id="card10" class="more">
         <div class="content">
@@ -311,6 +394,10 @@
             </div>
         </div>
     </div>
+    </div>
+    </div>
+    <div class="row">
+    <div class="column">
     <div class="card">
         <input type="checkbox" id="card11" class="more">
         <div class="content">
@@ -342,6 +429,8 @@
             </div>
         </div>
     </div>
+    </div>
+    <div class="column">
     <div class="card">
         <input type="checkbox" id="card12" class="more">
         <div class="content">
@@ -373,6 +462,33 @@
             </div>
         </div>
     </div>
+    </div>
+    <div class="column">
+            <div class="card">
+                <div class="content">
+                    <div class="front">
+                        <div class="more-videos">
+                            <a href="">
+                                <span class="fa fa-caret-right" style="font-size: 50px;"></span>
+                                <h4>More</h4>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="column">
+            <div class="card">
+                <div class="content">
+                     <div class="front">
+                        <div class="genre"><h2>Horror</h2></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    <div class="column">
     <div class="card">
         <input type="checkbox" id="card13" class="more">
         <div class="content">
@@ -404,6 +520,8 @@
             </div>
         </div>
     </div>
+    </div>
+    <div class="column">
     <div class="card">
         <input type="checkbox" id="card14" class="more">
         <div class="content">
@@ -435,6 +553,10 @@
             </div>
         </div>
     </div>
+    </div>
+    </div>
+    <div class="row">
+    <div class="column">
     <div class="card">
         <input type="checkbox" id="card15" class="more">
         <div class="content">
@@ -466,12 +588,14 @@
             </div>
         </div>
     </div>
+    </div>
+    <div class="column">
     <div class="card">
         <input type="checkbox" id="card16" class="more">
         <div class="content">
-            <div class="front" style="background-image: url('assets/img/Serien/der_kindsmörder_s.jpg')">
+            <div class="front" style="background-image: url('assets/img/Serien/kindsmörder_s.jpg')">
                 <div class="inner">
-                    <h2>Der Kindsmörder</h2>
+                    <h2>Kindsmörder</h2>
                     <div class="videoplay">
                         <a href="assets/video.mp4">
                         <span class="fa fa-play-circle" style="font-size: 50px;"></span>
@@ -482,7 +606,7 @@
             </div>
             <div class="back">
                 <div class="inner">
-                    <div class="titel"><h2>Der Kindsmörder</h2><br/></div>
+                    <div class="titel"><h2>Kindsmörder</h2><br/></div>
                     <div class="icons"><span class="fa fa-thumbs-up"></span></div>
                     <div class="icons"><span class="fa fa-thumbs-down"></span></div>
                     <div class="icons"><span class="fa fa-check"></span></div>
@@ -497,6 +621,33 @@
             </div>
         </div>
     </div>
+    </div>
+    <div class="column">
+            <div class="card">
+                <div class="content">
+                    <div class="front">
+                        <div class="more-videos">
+                            <a href="">
+                                <span class="fa fa-caret-right" style="font-size: 50px;"></span>
+                                <h4>More</h4>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="column">
+            <div class="card">
+                <div class="content">
+                    <div class="front">
+                        <div class="genre"><h2>Kids</h2></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    <div class="column">
     <div class="card">
         <input type="checkbox" id="card17" class="more">
         <div class="content">
@@ -528,10 +679,12 @@
             </div>
         </div>
     </div>
+    </div>
+    <div class="column">
     <div class="card">
         <input type="checkbox" id="card18" class="more">
         <div class="content">
-            <div class="front" style="background-image: url('assets/img/Serien/heidi_und_peter_s.jpg')">
+            <div class="front" style="background-image: url('assets/img/Serien/heidi_&_peter_s.jpg')">
                 <div class="inner">
                     <h2>Heidi und Peter</h2>
                     <div class="videoplay">
@@ -559,6 +712,10 @@
             </div>
         </div>
     </div>
+    </div>
+    </div>
+    <div class="row">
+    <div class="column">
     <div class="card">
         <input type="checkbox" id="card19" class="more">
         <div class="content">
@@ -590,6 +747,8 @@
             </div>
         </div>
     </div>
+    </div>
+    <div class="column">
     <div class="card">
         <input type="checkbox" id="card20" class="more">
         <div class="content">
@@ -617,6 +776,22 @@
                         <p>In der Unterwasserwelt Bodensee lebt der kleine Spongebob mit seinen Freunden Pady, Freddy und Ducky. Das Leben der Freunde ist sehr interessant und stellt sie täglich vor neuen Herausforderungen.</p>
                     </div>                    
                     <label for="card20" class="button return" aria-hidden="true"> <span class="fa fa-sort-up" style="font-size: 40px;"></span></label>
+                </div>
+            </div>
+        </div>
+    </div>
+    </div>
+    <div class="column">
+            <div class="card">
+                <div class="content">
+                    <div class="front">
+                        <div class="more-videos">
+                            <a href="">
+                                <span class="fa fa-caret-right" style="font-size: 50px;"></span>
+                                <h4>More</h4>
+                            </a>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
