--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,1 +1,33 @@
-<p>login works!</p>
+<div class="card-group" style="margin-top: -425px; width: 15%; height: 650px;">
+    <div class="card" style="background-color: rgba(0, 0, 0, 0); border: none;">
+        <img src="img/Logo/Chillwatcher-Logo-Quadrat-Kreis-3.svg"
+            alt="Hier sollte das ChillWatcher-Logo zu sehen sein">
+    </div>
+</div>
+<div class="card-group">
+    <div class="card">
+        <h2>Login</h2>
+        <form>
+            <div class="form-group">
+                <label for="exampleInputEmail1">Email address</label>
+                <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
+                    placeholder="Enter email" style="color: white;">
+                <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone
+                    else.</small>
+            </div>
+            <div class="form-group">
+                <label for="inputPassword5">Password</label>
+                <input type="password" id="inputPassword5" class="form-control" aria-describedby="passwordHelpBlock"
+                    placeholder="Enter password" style="color: white;">
+                <small id="passwordHelpBlock" class="form-text text-muted">
+                    Your password must be 8-20 characters long, contain letters and numbers, and must not contain
+                    spaces,
+                    special characters, or emoji.
+                </small>
+            </div>
+            <button onclick="myLogin()" type="submit" id="loginButton" class="btn btn-primary"><a id="loginLink"
+                    href="/home">Einloggen</a></button>
+            <h5><a href="/sign-up">Registrieren</a></h5>
+        </form>
+    </div>
+</div>
