--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -90,7 +90,7 @@
                     <h5 class="font-weight-bold text-uppercase mt-3 mb-4">Account</h5>
                     <ul class="list-unstyled">
                         <li><a href="">Konto-Details</a></li>
-                        <li><a href="">Abmelden</a></li>
+                        <li><a href="/login">Abmelden</a></li>
                     </ul>
                 </div>
             </div>
