--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -63,11 +63,11 @@
                     <!-- Links -->
                     <h5 class="font-weight-bold text-uppercase mt-3 mb-4">Navigation</h5>
                     <ul class="list-unstyled">
-                        <li><a href="#!">Startseite</a></li>
-                        <li><a href="#!">Serien</a></li>
-                        <li><a routerLink="/movies">Filme</a></li>
-                        <li><a href="#!">Kürzlich hinzugefügt</a></li>
-                        <li><a href="#!">Meine Liste</a></li>
+                        <li><a href="/home">Startseite</a></li>
+                        <li><a href="/series">Serien</a></li>
+                        <li><a href="/movies">Filme</a></li>
+                        <li><a href="/recently-added">Kürzlich hinzugefügt</a></li>
+                        <li><a href="/my-list">Meine Liste</a></li>
                     </ul>
                 </div>
                 <!-- Grid column -->
@@ -78,7 +78,7 @@
                     <h5 class="font-weight-bold text-uppercase mt-3 mb-4">Rechtlich</h5>
                     <ul class="list-unstyled">
                         <li><a href="#!">Impressum</a></li>
-                        <li><a href="#!">Datenschutz</a></li>
+                        <li><a href="/privacy">Datenschutz</a></li>
                     </ul>
 
                 </div>
