--- a/src/app/series/series.component.html
+++ b/src/app/series/series.component.html
@@ -210,7 +210,7 @@
         <div class="content">
             <div class="front">
                 <div class="more-videos">
-                    <a href="">
+                    <a href="/thriller">
                         <span class="fa fa-caret-right" style="font-size: 50px;"></span>
                         <h4>More</h4>
                     </a>
@@ -439,7 +439,7 @@
         <div class="content">
             <div class="front">
                 <div class="more-videos">
-                    <a href="">
+                    <a href="/komoedien">
                         <span class="fa fa-caret-right" style="font-size: 50px;"></span>
                         <h4>More</h4>
                     </a>
@@ -668,7 +668,7 @@
         <div class="content">
             <div class="front">
                 <div class="more-videos">
-                    <a href="">
+                    <a href="/drama">
                         <span class="fa fa-caret-right" style="font-size: 50px;"></span>
                         <h4>More</h4>
                     </a>
@@ -897,7 +897,7 @@
         <div class="content">
             <div class="front">
                 <div class="more-videos">
-                    <a href="">
+                    <a href="/horror">
                         <span class="fa fa-caret-right" style="font-size: 50px;"></span>
                         <h4>More</h4>
                     </a>
@@ -1126,7 +1126,7 @@
             <div class="content">
                 <div class="front">
                     <div class="more-videos">
-                        <a href="">
+                        <a href="/kids">
                             <span class="fa fa-caret-right" style="font-size: 50px;"></span>
                             <h4>More</h4>
                         </a>
