--- a/src/app/kids/kids.component.sass
+++ b/src/app/kids/kids.component.sass
@@ -57,6 +57,12 @@
 		display: grid 
 		grid-template-rows: 1fr 1fr 
 		justify-items: center 
+  h2 
+		display: grid 
+		grid-row: 1 
+		text-transform: uppercase 
+		letter-spacing: 2px 
+		color: #00e5ff 
 
 .videoplay 
 	display: grid 
