--- a/src/app/recently-added/recently-added.component.sass
+++ b/src/app/recently-added/recently-added.component.sass
@@ -57,7 +57,12 @@
 		display: grid 
 		grid-template-rows: 1fr 1fr 
 		justify-items: center 
-
+	h2 
+		display: grid 
+		grid-row: 1 
+		text-transform: uppercase 
+		letter-spacing: 2px 
+		color: #00e5ff 
 .videoplay 
 	display: grid 
 	grid-row: 2 
@@ -103,4 +108,6 @@
 	min-width: 3em 
 	color: #00e5ff 
 	text-align: center 
+
+
 
