--- a/src/app/recently-added/recently-added.component.html
+++ b/src/app/recently-added/recently-added.component.html
@@ -146,7 +146,7 @@
             <div class="content">
                 <div class="front">
                     <div class="more-videos">
-                        <a href="">
+                        <a href="/thriller">
                             <span class="fa fa-caret-right" style="font-size: 50px;"></span>
                             <h4>More</h4>
                         </a>
@@ -301,7 +301,7 @@
                 <div class="content">
                     <div class="front">
                         <div class="more-videos">
-                            <a href="">
+                            <a href="/komoedien">
                                 <span class="fa fa-caret-right" style="font-size: 50px;"></span>
                                 <h4>More</h4>
                             </a>
@@ -456,7 +456,7 @@
                 <div class="content">
                     <div class="front">
                         <div class="more-videos">
-                            <a href="">
+                            <a href="/drama">
                                 <span class="fa fa-caret-right" style="font-size: 50px;"></span>
                                 <h4>More</h4>
                             </a>
@@ -611,7 +611,7 @@
                 <div class="content">
                     <div class="front">
                         <div class="more-videos">
-                            <a href="">
+                            <a href="/horror">
                                 <span class="fa fa-caret-right" style="font-size: 50px;"></span>
                                 <h4>More</h4>
                             </a>
@@ -766,7 +766,7 @@
                 <div class="content">
                     <div class="front">
                         <div class="more-videos">
-                            <a href="">
+                            <a href="/kids">
                                 <span class="fa fa-caret-right" style="font-size: 50px;"></span>
                                 <h4>More</h4>
                             </a>
