--- a/src/app/my-list/my-list.component.sass
+++ b/src/app/my-list/my-list.component.sass
@@ -1,15 +1,20 @@
-.card-group 
-	width: 88% 
+*
+	box-sizing: border-box
+
+.card-column
+	width: 100% 
 	height: auto 
-	margin: 0 auto 
+	margin: 0 auto
 	display: flex 
 	flex-flow: row wrap 
+
 .card 
 	overflow: hidden 
 	background: transparent 
 	border: none 
 	width: 350px 
 	height: 450px 
+	padding: 16px
 	margin: 1em 
 	perspective: 1500px 
 	.content 
@@ -22,6 +27,10 @@
 	&:checked 
 		& ~ .content 
 			transform: rotateY(180deg) 
+.genre
+	text-align: center
+	grid-row: 2
+
 .front,
 .back 
 	position: absolute 
@@ -45,10 +54,22 @@
 		display: grid 
 		grid-template-rows: 1fr 1fr 
 		justify-items: center 
-
+	h2 
+		display: grid 
+		grid-row: 1 
+		text-transform: uppercase 
+		letter-spacing: 2px 
+		color: #00e5ff 
 .videoplay 
 	display: grid 
 	grid-row: 2 
+
+.more-videos
+	display: grid
+	grid-row: 2
+	text-align: center
+	
+
 .back 
 	transform: rotateY(180deg) 
 	.inner 
@@ -66,11 +87,11 @@
 		grid-row: 2 
 		font-size: 20px 
 	.details 
-		grid-row: 4 
+		grid-row: 2 
 		color: #00e5ff 
 		size: 15px 
 	.description 
-		grid-row: 6 
+		grid-row: 5 
 		grid-column: 1/-1 
 		font-size: 15px 
 		color: #00e5ff 
@@ -83,5 +104,30 @@
 	line-height: 2.9em 
 	min-width: 3em 
 	color: #00e5ff 
-	text-align: center 
+	text-align: center
+	cursor: pointer
+	 
 
+@media (min-width: 34em)
+	.card-columns
+		-webkit-column-count: 2
+		-moz-column-count: 2
+		column-count: 2
+
+@media (min-width: 48em)
+	.card-columns
+		-webkit-column-count: 3
+		-moz-column-count: 3
+		column-count: 3
+
+@media (min-width: 62em)
+	.card-columns
+		-webkit-column-count: 4
+		-moz-column-count: 4
+		column-count: 4
+
+@media (min-width: 75em)
+	.card-columns
+		-webkit-column-count: 5
+		-moz-column-count: 5
+		column-count: 5
